--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,22 @@
-blinker==1.4
-certifi==2018.11.29
-chardet==3.0.4
-Click==7.0
-et-xmlfile==1.0.1
-Flask==1.0.2
+blinker==1.5
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+Flask==2.2.3
 Flask-Mail==0.9.1
-idna==2.8
-itsdangerous==1.1.0
-jdcal==1.4
-Jinja2==2.10
-MarkupSafe==1.1.0
-numpy==1.16.0
-openpyxl==2.5.12
-pandas==0.23.4
-pkg-resources==0.0.0
-pyproj==1.9.6
-python-dateutil==2.7.5
-pytz==2018.9
-requests==2.21.0
-six==1.12.0
-urllib3==1.24.1
-Werkzeug==0.14.1
-xlrd==1.2.0
+idna==3.4
+importlib-metadata==6.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+numpy==1.24.2
+pandas==1.5.3
+pyproj==3.4.1
+python-dateutil==2.8.2
+pytz==2022.7.1
+requests==2.28.2
+six==1.16.0
+urllib3==1.26.14
+Werkzeug==2.2.3
+xlrd==2.0.1
+zipp==3.15.0
